# Megaclops

./: megaklops.cabal
src/: Main.hs  Path.hs  in
